--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,18 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.test-connection=true
 spring.mail.username=esoen0919clarence212@gmail.com
-spring.mail.password=jjxzrsruskerwrzr
+spring.mail.password=chqowwzhpuafypkv
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+
 spring.mail.properties.mail.debug=true
 
 twilio.SID=AC657cceca4aa1af90efe1d2fdf7a327bc
-twilio.auth=87bccc260d07a4feee783ca77768caf1
+twilio.auth=cdfb3d86419b2bf3e6bb001a814f66db
 twilio.phone.num=+12569524258
